HomeTask_3: added new version lib fo postgrey + fix bug in sp

--- a/HomeTask_33/pom.xml
+++ b/HomeTask_33/pom.xml
@@ -24,9 +24,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>postgresql</groupId>
+            <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>${postgres-jdbc-driver.version}</version>
+            <version>42.2.2</version>
         </dependency>
         <dependency>
             <groupId>c3p0</groupId>
