--- a/MyDiplom/pom.xml
+++ b/MyDiplom/pom.xml
@@ -44,5 +44,10 @@
             <artifactId>c3p0</artifactId>
             <version>0.9.1.2</version>
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.10</version>
+        </dependency>
     </dependencies>
 </project>
