--- a/MyDiplom/pom.xml
+++ b/MyDiplom/pom.xml
@@ -7,7 +7,7 @@
     <groupId>groupId</groupId>
     <artifactId>MyDiplom</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <packaging>war</packaging>
 
     <prerequisites>
         <maven>3</maven>
